# robotics_software_engineer

module_1_assignment/: CMakeLists.txt  Readme2.md
module_1_assignment/include/: sensor.hpp
module_1_assignment/lib/: sensor.cpp
module_1_assignment/src/: Task1.cpp  Task2.cpp  Task3.cpp
module_2_assignment/rse_m1/: CMakeLists.txt  package.xml
module_2_assignment/rse_m1/launch/: Cturtule.launch.py  task2.launch.py  task3.launch.py
module_2_assignment/rse_m1/src/: rse1.cpp  task1.cpp  turtle_drive.cpp
module_3_assignment/: CMakeLists.txt  Readme.md  frames_2024-09-02_16.26.32.gv  notes.odt  package.xml
module_3_assignment/launch/: task1.launch.py
module_3_assignment/src/: example1.cpp
module_3_assignment/urdf/: task1.urdf  task2.urdf  task3.urdf  task3b.urdf
module_4_assessment/: Readme.md
module_4_assessment/module_4_assignment/rse_m4/: CMakeLists.txt  package.xml  task4.odt
module_4_assessment/module_4_assignment/rse_m4/launch/: task1.launch.py  task3.launch.py
module_4_assessment/module_4_assignment/rse_m4/models/line_track/: model.sdf
module_4_assessment/module_4_assignment/rse_m4/src/: .~lock.answer task4.odt#  task1.cpp  task3.cpp
module_4_assessment/module_4_assignment/rse_m4/urdf/: task3.urdf
module_4_assessment/module_4_assignment/rse_m4/worlds/: line_following.world  maze.world
module_4_assessment/robot_sensing_debug/launch/: lidar_maze_solving.launch.py
module_4_assessment/robot_sensing_debug/src/: line_following_with_camera.cpp  maze_solving_with_lidar.cpp
